--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -31,7 +31,7 @@
    </section>
       </section>
       <section class="card" id="git-section">
-        <h2>git</h2>
+        <h2>Git</h2>
         <ul>
           <li>git status: checks what branch we are currently on </li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
@@ -40,9 +40,8 @@
       <section class="card" id="javascript-section">
         <h2>javascript</h2>
         <ul>
-          <li>JS notes
-            
-          </li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow ist the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
